--- a/src/index.css
+++ b/src/index.css
@@ -8,7 +8,7 @@
   display: flex;
   flex-direction: column;
   align-items: center;
-  justify-content: center;
+  justify-content: safe center;
 
   background-color: aliceblue;
 }
